Add open graph and twitter card support

--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:title" content="Prime Finder">
+    <meta property="og:url" content="http://filiph.github.io/prime_finder/">
+    <meta property="og:description" content="This valentine’s day, give a gift of a prime number">
+    <meta property="og:image" content="http://filiph.github.io/prime_finder/img/screenshot.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@filiphracek">
+    <meta name="twitter:title" content="Prime Finder">
+    <meta name="twitter:description" content="This valentine’s day, give a gift of a prime number">
+    <meta name="twitter:image" content="http://filiph.github.io/prime_finder/img/screenshot.png">
+
+
     <script defer src="main.dart" type="application/dart"></script>
     <script defer src="packages/browser/dart.js"></script>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
