Add links to discussions

--- a/web/index.html
+++ b/web/index.html
@@ -71,8 +71,9 @@
 
     <p>If you want a minimal example of isolates, have a look at <a href="https://github.com/dartlang-italia/dart-libraries-samples/tree/master/isolate">dartlang-italia&#8217;s samples repo</a>.</p>
 
-    <p>— Filip Hracek, Jan 17, 2017 <br />
-      &nbsp;&nbsp;&nbsp;&nbsp;<a href="https://twitter.com/filiphracek">Twitter</a>, <a href="https://plus.google.com/+filiphracek">G+</a></p>
+    <p class="right">— Filip Hracek, Jan 17, 2017 <br />
+      &nbsp;&nbsp;&nbsp;&nbsp;Discussions: <a href="https://news.ycombinator.com/item?id=13424312">Hacker News</a>, <a href="https://www.reddit.com/r/programming/comments/5onlwf/this_valentines_day_give_your_significant_other_a/">Reddit</a>, <a href="https://twitter.com/filiphracek/status/821593209843417088">Twitter</a>, <a href="https://plus.google.com/u/0/+filiphracek/posts/A1ABeaSogs8">G+</a> <br />
+      &nbsp;&nbsp;&nbsp;&nbsp;Profiles: <a href="https://twitter.com/filiphracek">Twitter</a>, <a href="https://plus.google.com/+filiphracek">G+</a></p>
 
   </body>
 </html>
