--- a/lib/app_component.html
+++ b/lib/app_component.html
@@ -1,5 +1,3 @@
-<!--<h1>Find primes that include the following numbers</h1>-->
-
 <div class="main">
 
     <div class="panel">
@@ -48,20 +46,23 @@
         <div class="section">
 
             <h1>
-                <span class="red-span" *ngIf="!isolateComputing && foundIntegers.isNotEmpty">
+                <span class="red-span"
+                      *ngIf="!isolateComputing && foundIntegers.isNotEmpty">
                     {{ foundIntegers.first }}
                 </span>
-                <span class="gray-span" *ngIf="isolateComputing">
-                    {{lastResult ?? '0'}}
+                <span class="gray-span"
+                      *ngIf="isolateComputing">
+                    {{ lastResult ?? '0' }}
                     <material-spinner *ngIf="isolateComputing"></material-spinner>
                 </span>
             </h1>
 
-            <!--<h3 *ngIf="previous != null">Previous</h3>-->
-
             <ul>
+                <li *ngIf="isolateComputing && foundIntegers.isNotEmpty">
+                    {{ foundIntegers.first }}
+                </li>
                 <li *ngFor="let item of previous">
-                    {{item}}
+                    {{ item }}
                 </li>
             </ul>
 
